EDU-1589 Fix icon spacing in buttons that are right aligned

--- a/src/components/dashboard/notifications-tab.less
+++ b/src/components/dashboard/notifications-tab.less
@@ -71,7 +71,7 @@
 }
 
 .NotificationsTab-removeAllNotificationsButton {
-  display: block !important;
+  display: flex !important;
   margin-left: auto;
   margin-bottom: @edu-page-content-padding;
 }
